--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -217,6 +217,9 @@
   <data name="promotion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\promotion.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="restore_down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\restore-down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="resume" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\resume.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
