--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -259,6 +259,9 @@
   <data name="promotion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\promotion.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="refesh__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refesh (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="reset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -291,6 +294,9 @@
   </data>
   <data name="tik_tok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tik-tok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tinhluong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tinhluong.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="trainning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trainning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
